# magazyn360

./: README.md  docker-compose.yml
.github/workflows/: main.yml  main_magazyn360.yml
magazyn360-api/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  manage.py  pyproject.toml  pytest_results.xml
magazyn360-api/apps/core/: admin.py  api_urls.py  apps.py  enums.py  models.py  permissions.py  permissions_config.py  serializers.py  signals.py  validators.py  views.py
magazyn360-api/apps/core/management/commands/: init_permissions.py
magazyn360-api/apps/core/migrations/: 0001_initial.py  0002_alter_address_name_alter_address_type_and_more.py
magazyn360-api/apps/core/tests/: conftest.py
magazyn360-api/apps/core/tests/unit/: test_admin.py  test_models.py  test_permissions.py  test_serializers.py
magazyn360-api/docs/supervisord/: magazyn360.conf
magazyn360-api/helm-chart/: Chart.yaml  values.yaml
magazyn360-api/helm-chart/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  postgres.yaml  secrets.yaml  service.yaml
magazyn360-api/magazyn360/: asgi.py  settings.py  urls.py  wsgi.py
